<resources>
    <string name="app_name">Code Like</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="textLiked">0</string>
    <string name="textShared">0</string>
    <string name="textViewOpen">0</string>
    <string name="menu_remove">Remove</string>
    <string name="description_post_save">post_save</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="original_text_post">Original text Post</string>
    <string name="edit_message">Edit Message</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote">Notifications: %1$s</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\\\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="app_err_message_received">The app version may be outdated, try updating it.</string>
    <string name="notification_new_post">%1$s posted a new post:</string>
    <string name="no_post">No post</string>
    <string name="error_getting_the_list_posts">Error getting the list posts</string>
    <string name="retry">Retry</string>
    <string name="close">close</string>
    <string name="error_edit_posts">Post vait send server</string>
    <string name="goviewnewposts">Go view new Posts</string>
    <string name="menu_save">Save</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="not_authorized">You have not been authorized</string>
    <string name="message_logout">After logging out, saving will not be available</string>
    />
</resources>