<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".viewmodel.AuthenticationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickPhoto"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_select_photo"
        android:padding="@dimen/common_spacing"
        android:visibility="gone"
        app:icon="@drawable/ic_photo_24dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="16dp"
        android:visibility="gone" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/user"
        android:inputType="text"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:padding="16dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/photoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/description_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/menu_remove"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/sign_up"
        android:visibility="gone" />


</LinearLayout>