<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cordinator"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/editPen"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toTopOf="@id/editLayout"
            app:srcCompat="@drawable/baseline_edit_24" />

        <TextView
            android:id="@+id/editHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_message"
            android:textColor="#5E7998"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/closeEdit"
            app:layout_constraintStart_toEndOf="@id/editPen"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/originalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/original_text_post"
            app:layout_constraintBottom_toTopOf="@id/barrier_save"
            app:layout_constraintEnd_toStartOf="@id/closeEdit"
            app:layout_constraintStart_toEndOf="@id/editPen"
            app:layout_constraintTop_toBottomOf="@id/editHeading"
            tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/closeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/editLayout"
            app:layout_constraintTop_toTopOf="@id/editLayout"
            app:srcCompat="@drawable/baseline_close_24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="closeEdit" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:padding="16dp"
            android:hint="@string/post_text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="@id/editLayout"
            app:layout_constraintEnd_toEndOf="@id/editLayout"
            app:layout_constraintStart_toStartOf="@id/editLayout"
            app:layout_constraintTop_toBottomOf="@id/barrier_save"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="editPen, editHeading, originalText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cordinator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="100dp">

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_save"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_add_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>